# firecore-config

./: pyproject.toml
.github/workflows/: python-package.yml
src/firecore_config/: _config.py
