[project]
name = "firecore-config"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SunDoge", email = "triplez0@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
