[project]
name = "firecore-config"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SunDoge", email = "triplez0@outlook.com"},
]
dependencies = [
    "pydantic>=2.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipdb>=0.13.13",
    "icecream>=2.1.3",
]
